<resources>
    <string name="app_name">SdnManager</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="animation">profile</string>
    <string name="login_title">Login</string>
    <string name="forget_password_title">Forget Password ?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_title">Email</string>
    <string name="sign_in_toolbar_title">Sign In</string>
    <string name="live_tracking_title">Live Tracking</string>
    <string name="history_tracking_title">History Tracking</string>

    <string name="reset_password_toolbar_title">Reset Password</string>

    <string name="enter_email_text">Please Enter the email for your account, to reset your password.
</string>
    <string name="send_reset_password_email_title">Send Reset Password Email</string>

    <string name="short_password">Password is should be equal or greater than 8 characters</string>
    <string name="enter_valid_email">Insert in format email@example.com</string>
    <string name="live_tracking">Live tracking</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="log_out_title">Log Out</string>
    <string name="fleet_tracking_title">Fleet Tracking</string>
    <string name="fleet_reports_title">Fleet Reports</string>
    <string name="notification_title">Notification</string>
    <string name="captured_events_title">Captured Events</string>
    <string name="account_title">Account</string>
    <string name="notfication_title">Notifications</string>

    <string name="yes_title">Yes</string>
    <string name="no_title">No</string>
    <string name="are_you_sure_title">Are you Sure ?</string>
    <string name="are_you_sure_you_want_to_log_out_title">Are you Sure you want to log out ?</string>
    <string name="settings_title">Settings</string>
    <string name="vehicles_title">Vehicles</string>
    <string name="cut_of_engine">Cut off Engine </string>

    <string name="cameras_title">Cameras</string>
    <string name="general_services_title">General Services</string>

    <string name="plate_number">Plate# : </string>
    <string name="liscense_start">License Start : </string>
    <string name="liscense_end">License End : </string>

    <string name="camera_title">Camera</string>
    <string name="drivers_title">Drivers</string>
    <string name="google_maps_key">AIzaSyBIhRGLhtlX6nlV0y8aHPYJAnxC_zP_3YI</string>
    <string name="choose_camera_title">Choose Camera</string>
    <string name="choose_type_title">Choose Type</string>
    <string name="choose_groups_title">Choose Groups</string>
    <string name="submit_title">Submit</string>
    <string name="fleet_vision_title">Fleet Vision</string>
    <string name="business_vision_title">Business Vision</string>
    <string name="school_vision_title">School Vision</string>
    <string name="empty_data_title">Empty Data</string>
    <string name="search_title">Search</string>
    <string name="from_title">From</string>
    <string name="to_title">To</string>
    <string name="start_title">Start</string>
    <string name="play_speed_title">Play Speed</string>
    <string name="min_speed_title">Min Speed</string>
    <string name="drivername_title">Driver name :</string>

    <string-array name="cameras_array">
        <item>Choose Type </item>
        <item>Camera</item>
        <item>Vehicle</item>
    </string-array>

    <string-array name="groups_array">
        <item>Default</item>
        <item>Group 1</item>
    </string-array>
</resources>

