<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".features.home.fragments.camera_vehicle_chooser.CameraVehicleChooser">


    <TextView
        android:id="@+id/tv_choose_type"
        style="@style/headerStyleText"
        android:text="@string/choose_type_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_cameras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_type" />

    <TextView
        android:id="@+id/tv_choose_group"
        style="@style/headerStyleText"
        android:text="@string/choose_groups_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_cameras" />

    <Spinner
        android:id="@+id/spinner_groups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_group" />

    <TextView
        android:id="@+id/tv_choose_camera"
        style="@style/headerStyleText"
        android:text="@string/choose_camera_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_groups" />



    <TextView
        android:id="@+id/tv_search"
        style="@style/headerStyleText"
        android:text="@string/search_title"
        android:drawableStart="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_groups" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cameras_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_10sdp"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_camera"
        tools:itemCount="3"
        tools:listitem="@layout/camera_item_chooser_layout" />

    <include
        layout="@layout/empty_box"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit"
        style="@style/buttonStyle"
        android:text="@string/submit_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_empty"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="iv_empty_box,tv_empty_data" />
</androidx.constraintlayout.widget.ConstraintLayout>