<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.services_chosen.ServicesChosenActivity">


    <Button
        android:id="@+id/btn_fleet"
        style="@style/buttonStyle"
        android:backgroundTint="@color/orange"
        android:padding="@dimen/_10sdp"
        android:text="@string/fleet_vision_title"
        android:textSize="@dimen/_18sdp"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hr_guidline" />

    <Button
        android:id="@+id/btn_Business"
        style="@style/buttonStyle"
        android:backgroundTint="@color/colorPrimary"
        android:padding="@dimen/_10sdp"
        android:text="@string/business_vision_title"
        android:textSize="@dimen/_18sdp"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_fleet" />

    <Button
        android:id="@+id/btn_school"
        style="@style/buttonStyle"
        android:backgroundTint="@color/pink"
        android:padding="@dimen/_10sdp"
        android:text="@string/school_vision_title"
        android:textSize="@dimen/_18sdp"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_Business" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hr_guidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />


</androidx.constraintlayout.widget.ConstraintLayout>