<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">


        <ImageView
            android:id="@+id/ic_car"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_vehicles"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_vehicle_name_vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/vehicles_title"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/ic_car"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_driver_name_in_vehicle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/drivername_title"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toEndOf="@id/ic_car"
            app:layout_constraintTop_toBottomOf="@id/tv_vehicle_name_vehicle" />



        <TextView
            android:id="@+id/tv_plate_number_in_vehicle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/plate_number"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toEndOf="@id/ic_car"
            app:layout_constraintTop_toBottomOf="@id/tv_driver_name_in_vehicle" />

        <TextView
            android:id="@+id/tv_location_vehicle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="Location"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ic_car"
            app:layout_constraintTop_toBottomOf="@id/tv_plate_number_in_vehicle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>